7. IaC/556 CloudFormation/Practical/modules/ec2/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 module for a 3-tier architecture

Parameters:
  EnvironmentName:
    Type: String
    Default: demo
  VpcId:
    Type: AWS::EC2::VPC::Id
  AlbSecurityGroupId:
    Type: AWS::EC2::SecurityGroup::Id
  KeyPairName:
    Type: String
  ImageId:
    Type: String

Resources:
  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow web traffic from the ALB and SSH from the internet
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref AlbSecurityGroupId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ec2-sg

  DemoKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-key-pair

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub ${EnvironmentName}-launch-template
      LaunchTemplateData:
        ImageId: !Ref ImageId
        InstanceType: t2.micro
        KeyName: !Ref KeyPairName
        SecurityGroupIds:
          - !Ref Ec2SecurityGroup
        UserData: !Base64 |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd

Outputs:
  Ec2SecurityGroupId:
    Value: !Ref Ec2SecurityGroup
  LaunchTemplateId:
    Value: !Ref LaunchTemplate
